# rust

./: .gitignore
cmd/: Cargo.toml
cmd/hello_cargo/: Cargo.toml
cmd/hello_cargo/src/: lib.rs  main.rs  test.rs  zz.rs
cmd/hello_macro/: Cargo.toml
cmd/hello_macro/hello_macro_derive/: Cargo.toml
cmd/hello_macro/hello_macro_derive/src/: lib.rs
cmd/learn-rust/: Cargo.toml
cmd/learn-rust/cratetest/: Cargo.toml
cmd/learn-rust/cratetest/tests/: pizzas.rs
cmd/learn-rust/generic/: Cargo.toml
cmd/learn-rust/iterator/: Cargo.toml
cmd/learn-rust/iterator/src/: main.rs
cmd/learn-rust/lifetimes/: Cargo.toml
cmd/learn-rust/modules/: Cargo.toml
cmd/learn-rust/option/: Cargo.toml
cmd/learn-rust/option/src/: main.rs
cmd/learn-rust/result/: Cargo.toml
cmd/learn-rust/result/src/: main.rs
cmd/learn-rust/rusty_journal/: Cargo.toml  tasks.json
cmd/learn-rust/rusty_journal/src/: cli.rs  main.rs  tasks.rs
cmd/learn-rust/src/: main.rs
cmd/learn-rust/testcase/: Cargo.toml
cmd/learn-rust/testcase/src/: lib.rs  main.rs
cmd/learn-rust/visibility/: Cargo.toml
cmd/lenum/: Cargo.toml
cmd/lenum/src/: lib.rs  main.rs
cmd/lenum/tests/: test.rs
cmd/lstruct/: Cargo.toml
cmd/lstruct/src/: main.rs
cmd/minigrep/: Cargo.toml
cmd/minigrep/src/: lib.rs  main.rs
cmd/ownership/: Cargo.toml
cmd/ownership/src/: main.rs
cmd/use_macro/: Cargo.toml
cmd/use_macro/src/: main.rs
cmd/webserver/: Cargo.toml
cmd/webserver/src/: 404.html  lib.rs  main.rs
os/: Cargo.toml  README.md
os/.cargo/: config.toml
os/src/: gdt.rs  interrupts.rs  (+5 more)
vmm/: Cargo.toml
(+3 files in other folders)
