[workspace]
members = [
  "lenum",
  "lstruct",
  "hello_cargo",
  "minigrep",
  "ownership",
  "hello_macro",
  "hello_macro/hello_macro_derive",
  "use_macro",
  "webserver",
  "learn-rust",
  "learn-rust/option",
  "learn-rust/result",
  "learn-rust/lifetimes",
  "learn-rust/generic",
  "learn-rust/iterator",
  "learn-rust/visibility",
  "learn-rust/modules",
  "learn-rust/testcase",
  "learn-rust/cratetest",
  "learn-rust/rusty_journal"
]
